--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -5,6 +5,10 @@
   "dependencies": {
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
+    "@material-ui/icons": "^4.11.2",
+    "@material/image-list": "^13.0.0",
+    "@mui/icons-material": "^5.5.0",
+    "@mui/material": "^5.5.0",
     "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
     "react": "^17.0.2",
