--- a/Backend/package.json
+++ b/Backend/package.json
@@ -15,9 +15,11 @@
     "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-session": "^1.17.2",
+    "kafka-node": "^5.0.0",
     "mongoose": "^6.2.9",
     "multer": "^1.4.4",
     "passport": "^0.5.2",
