--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -20,7 +20,8 @@
     "react-router": "^6.2.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
-    "react-select": "^5.2.2",
+    "react-select": "^5.3.0",
+    "react-table": "^7.7.0",
     "redux": "^4.1.2",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
