--- a/Backend/package.json
+++ b/Backend/package.json
@@ -18,7 +18,9 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-graphql": "^0.12.0",
     "express-session": "^1.17.2",
+    "graphql": "^16.4.0",
     "kafka-node": "^5.0.0",
     "mongoose": "^6.2.9",
     "multer": "^1.4.4",
