--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.6.2",
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
     "@material-ui/icons": "^4.11.2",
@@ -11,6 +12,7 @@
     "@mui/material": "^5.5.0",
     "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
+    "graphql": "^16.4.0",
     "react": "^17.0.2",
     "react-animated-heart": "^0.0.7-alpha.1",
     "react-bootstrap": "^2.1.2",
