--- a/Backend/package.json
+++ b/Backend/package.json
@@ -21,6 +21,7 @@
     "express-graphql": "^0.12.0",
     "express-session": "^1.17.2",
     "graphql": "^16.4.0",
+    "graphql-upload": "^13.0.0",
     "kafka-node": "^5.0.0",
     "mongoose": "^6.2.9",
     "multer": "^1.4.4",
