--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,6 +10,7 @@
     "@material/image-list": "^13.0.0",
     "@mui/icons-material": "^5.5.0",
     "@mui/material": "^5.5.0",
+    "apollo-upload-client": "^17.0.0",
     "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
     "graphql": "^16.4.0",
